--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <div id="landing-descriptions">
             <h2>Welcome Back!</h2>
-            <p>Login to your account to continue earning passive income effortlessly at your convenience.</p>
+            <p>Login to your account to continue. {template page for display. I can create yours based on your liking and color preferences}</p>
           </div>
           <div id="landing-form-input">
             <input id="landing-input" type="text" placeholder="Enter Your Email" required>
