--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <span id="span"><a href="#">Forgot Password</a></span>
           </div>
           <div class="signup">
-            <span>New to Winkywave? <a href="signup.html"><b>Create Account</b></a></span>
+            <span>New to {Your Site Name}? <a href="signup.html"><b>Create Account</b></a></span>
           </div>
             
         </form>
@@ -100,4 +100,4 @@
     </script>
     
 </body>
-              </html>
+</html>
